Closed
Bug 378540
Opened 18 years ago
Closed 18 years ago
Bad results for GetTextAtOffset with word boundaries
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
People
(Reporter: aaronlev, Assigned: aaronlev)
References
(Blocks 1 open bug)
Details
(Keywords: access, regression)
Attachments
(1 file, 1 obsolete file)
|
2.13 KB,
patch
|
surkov
:
review+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
Steps:
1. Go to http://www.mozilla.org/access/qa/jstest.html
2. Select Word Start or Word End
3. Click on some words and check the results -- the boundaries are not correctly computed
| Assignee | ||
Comment 1•18 years ago
|
||
Attachment #262600 -
Flags: review?(surkov.alexander)
Comment 2•18 years ago
|
||
with the patch I'm clicking at first "Sponsored Links" I get:
Text at point: Sponsored [0,10] Sponsored L [0,11] Links [10,15]
without patch
Text at point: Sponsored [0,10] Links [10,15]
Comment 3•18 years ago
|
||
(In reply to comment #2)
> with the patch I'm clicking at first "Sponsored Links" I get:
> Text at point: Sponsored [0,10] Sponsored L [0,11] Links [10,15]
> without patch
> Text at point: Sponsored [0,10] Links [10,15]
>
never mind :) vice versa
Comment 4•18 years ago
|
||
Comment on attachment 262600 [details] [diff] [review]
Increment start/end index by 1 in certain circumstances, but be careful about end of hypertext
1) add
<h2>Sponsored Links</h2>
abc<br>DEF
<p>Hello</p>
click on 'abc':
assertion and
Text at point: [obj] [0,1]
2. click on bold 'abc'
assertions and
Text at point: bc [1,4] ef [5,8] ij. [9,12]
Attachment #262600 -
Flags: review?(surkov.alexander) → review-
| Assignee | ||
Comment 5•18 years ago
|
||
There was also something weird with:
<body>
text
</body>
The first word was 0,1 with nothing in it.
Comment 6•18 years ago
|
||
do we have hyper text accessible for body?
| Assignee | ||
Updated•18 years ago
|
Keywords: regression
| Assignee | ||
Comment 7•18 years ago
|
||
Attachment #262600 -
Attachment is obsolete: true
Attachment #280490 -
Flags: review?(surkov.alexander)
Comment 8•18 years ago
|
||
Comment on attachment 280490 [details] [diff] [review]
New approach: move code snippet from bug 352340 so that it works again -- code from bug 374100 had broken it
r=me
Attachment #280490 -
Flags: review?(surkov.alexander)
Attachment #280490 -
Flags: review+
Attachment #280490 -
Flags: approval1.9?
| Assignee | ||
Updated•18 years ago
|
Severity: normal → major
Updated•18 years ago
|
Attachment #280490 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•