Bug 378540. GetTextAtOffset() broken for word boundaries. r=surkov, a=dsicore